# OpenGLTemplate

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGLFW3.cmake  FindGLM.cmake
lib/: glfw3.lib  soil2.lib
res/shader/: basic_Shader.glsl  phong_fragShader.glsl  phong_vertShader.glsl  plasma_fragShader.glsl  plasma_vertShader.glsl
src/: AudioManager.cpp  AudioManager.h  ImportedModel.cpp  ImportedModel.h  IndexBuffer.cpp  IndexBuffer.h  Main.cpp  Renderer.cpp  Renderer.h  Sound.h  Spehre.cpp  Spehre.h  Torus.cpp  Torus.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/helpers/: RootDir.h.in
